# toolfetch

./: README.md  index.html  package-lock.json  package.json  pingoptions.html  vite.config.ts  vite.config.ts.timestamp-1694109873862-fa32bc596dc7c.mjs
src/: main.ts  pingoptions.ts  styles.css  translations.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: buttons.rs  main.rs  systeminfo.rs
